# HACKATHON2-TODO2-PHASE2-BACKEND

./: .gitignore  README.md  create_tables.py  pyproject.toml
src/: main.py
src/api/: auth.py  health.py  tasks.py
src/core/: config.py  database.py  security.py
src/middleware/: auth.py
src/models/: task.py  user.py
src/schemas/: task.py  user.py
